--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,7 @@
 spring.application.name=SpringBootProject
-# H2 Database Configuration
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.password=password
 spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# Spring Security
-spring.security.user.name=admin
-spring.security.user.password=admin
+spring.jpa.hibernate.ddl-auto=update
